# roboflow

./: .$uml.drawio.bkp  README.md  asdfasdf  pyproject.toml  uml.drawio
editor/: app.py
editor/controllers/: editor_controller.py  welcome_controller.py
editor/models/: editor_model.py  welcome_model.py
editor/models/datastore/: base_datastore.py  projects_datastore.py
editor/models/datastore/storage/: json_storage.py
editor/models/storage/: __init__.py  base_datastore.py  config_datastore.py  json_storage.py  projects_datastore.py
editor/resources/: welcome_widget.ui
editor/views/: welcome_widget.py
editor/views/blueprints/: action_widget.py  welcome_widget.py
editor/views/widgets/: dialogs.py  execute_widget.py  state_edit.py
roboflow/: a.xml  main.py
scenario/: base.py  models.py
src/editor/: app.py  run.py
src/editor/controllers/: welcome_controller.py
src/editor/models/datastore/: __init__.py  config_datastore.py
src/editor/models/datastore/storage/: __init__.py  abstract_storage.py
src/editor/resources/: action_widget.ui  welcome_widget.ui
src/editor/views/: editor_window.py  welcome_window.py
src/editor/views/blueprints/: welcome_widget.py
src/editor/views/widgets/: node_edit.py  scenario_treeview.py
src/scenario/: base.py
