[tool.poetry]
name = "roboflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyside6 = "^6.8.0.2"
dacite = "^1.8.1"

[tool.poetry.scripts]
editor     = "editor.run:main"
editor-uic = "editor.run:convert"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
