[tool.poetry]
name = "roboflow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.pyright]
venvPath="."
venv=".venv"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
dacite = "^1.8.1"
lxml = "^5.3.0"
qtpy = "^2.4.2"
pyside6 = "6.8.1"
nodegraphqt = {git = "https://github.com/jack-mil/NodeGraphQt.git"}
uiautomator = "^1.0.2"
uiautomator2 = "^3.2.8"
qtawesome = "^1.3.1"

[tool.poetry.scripts]
editor     = "src.editor.run:main"
editor-uic = "src.editor.run:convert"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
